<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Flatter</string>
    <string name="flatter_tag_line">TODO: Find your party</string>
    <string name="profile_settings_name">Настройки пользователя</string>
    <string name="title_activity_create_party">Создать Вечеринку</string>

    <!--Keys-->
    <string name="google_web_client_id">690797786947-p3c15gcq4bovk2uhklbcssnrrhjdijcv.apps.googleusercontent.com</string>

    <!--Errors-->
    <string name="error_login_title">Ошибка Авторизации</string>
    <string name="error_login_password_login">Неверный логин или пароль</string>
    <string name="error_login_disable">Аккаунт был деактивирован</string>
    <string name="error_login_extra">Произошла ошибка авторизации, попробуйте еще раз</string>
    <string name="error_loading">Произошла ошибка при загрузке</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_social">Люди рядом</string>
    <string name="title_chat">Чат</string>
    <string name="title_map">Карта</string>
    <string name="title_party">Вечеринки</string>
    <string name="title_person">Аккаунт</string>
    <string name="log_in">Войти в систему</string>

    <string name="title_activity_log_in">Войти</string>
    <string name="forget_pas">Забыли пароль?</string>

    <string name="log_hint">Вы не вошли в систему. Для просмотра профиля войдите в аккаунт или создайте новый.</string>
    <string name="title_activity_sing_up">Зарегестрироваться</string>
    <string name="not_log_in">Еще не зарегестрированы?</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="title_activity_sign_in_list">Title</string>

    <string name="google_sign_in">Sign in with Google</string>
    <string name="instagram_sign_in">Sign in with Instagram</string>
    <string name="vk_sign_in">Sign in with Vk</string>
    <string name="mail_sign_in">Sign in with Mail</string>

    <string name="google_sign_up">Sign up with Google</string>
    <string name="instagram_sign_up">Sign up with Instagram</string>
    <string name="vk_sign_up">Sign up with Vk</string>
    <string name="mail_sign_up">Sign up with Mail</string>
    <string name="title_activity_sign_up_mail">SignUpMailActivity</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>

    <string name="loading" tools:ignore="TypographyEllipsis">Загрузка...</string>
    <string name="required">Пустое поле</string>
    <string name="pass_min_length">Пустое поле</string>
    <string name="action_settings">Настройки</string>
    <string name="action_logout">Выйти</string>
    <string name="action_retry">Повторить</string>
    <string name="request_int">Введите число</string>
    <string name="request_name">Введите корректное имя</string>

    <!--Fake-->
    <string name="person_description">Canadian actor, director, producer, and musician. An avid motorcyclist, Reeves co-founded Arch</string>
    <string name="title_activity_settings">Settings</string>
    <string name="connect">Подключить</string>
    <string name="instagram">Instagram</string>
    <string name="title_activity_profile_settings">ProfileSettingsActivity</string>
    <string name="cancel">Отменить</string>
    <string name="add">Добавить</string>
    <string name="too_early">Некорректная дата</string>
    <string name="title_activity_party">PartyActivity</string>
    <string name="text_text">Big about text here Big about text
        Big about text here Big about text
        Big about text here Big about text
        Big about text here Big about text
        Big about text here Big about text
        Big about text here Big about text
        Big about text here Big about text
        Big about text here Big about text
        Big about text here Big about text
        Big about text here Big about text
        Big about text here Big about text
        Big about text here Big about text
        here Big about text here Big about text here </string>
    <string name="delete">Удалить</string>
    <string name="last_party">Последняя вечеринка</string>
    <string name="add_chat">Новое сообщение</string>
    <string name="title_activity_new_chat">NewChatActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_person">PersonActivity</string>
</resources>
