<?xml version="1.0" encoding="utf-8"?>
<!--Bottom navigation menu-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_social"
        android:title="@string/title_social" />
    <item
        android:id="@+id/navigation_chat_list"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_party_list"
        android:icon="@drawable/ic_party"
        android:title="@string/title_party" />

    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/ic_person"
        android:title="@string/title_person" />

</menu>
