<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:activity=".activities.auth.in.LogInMailActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">


        <ImageView
            android:id="@+id/iv_log_in_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_flatter_logo"
            app:layout_constraintBottom_toTopOf="@+id/card_log_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="ContentDescription" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_log_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:visibility="invisible"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_log_in_logo">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                tools:ignore="Autofill">

                <TextView
                    android:id="@+id/log_in_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/sign_in_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/sign_up_s_name"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="24dp"
                    android:drawableStart="@drawable/ic_edt_mail_outline"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:ems="10"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/log_in_label" />

                <EditText
                    android:id="@+id/sign_up_pass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_edt_lock_outline"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_s_name" />

                <TextView
                    android:id="@+id/forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/forget_pas"
                    android:textAppearance="@style/sign_up"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_pass" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <!--TODO: lower stateListAnimator-->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:stateListAnimator="@animator/card_elevator"
            android:visibility="invisible"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_fab_sing_in_button"
            tools:ignore="UnusedAttribute" />

        <Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_log_container" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
